# internal/app/cloud-saves-backend/dto/common/get-resource.go
@@ -1,0 +1,7 @@
+package common
+
+type GetResourceDTO struct {
+	PageNumber  int    `form:"pageNumber" binding:"required,gt=0"`
+	PageSize    int    `form:"pageSize" binding:"required,gt=0"`
+	SearchQuery string `form:"searchQuery" binding:"min=0"`
+}
