# internal/app/cloud-saves-backend/dto/common/resource.go
@@ -1,0 +1,6 @@
+package common
+
+type ResourceDTO[T any] struct {
+	Items      []T `json:"items"`
+	TotalCount int `json:"totalCount"`
+}
