# internal/app/cloud-saves-backend/dto/user/user-response.go
@@ -9,3 +9,12 @@ type UserResponseDTO struct {
 	Role      models.RoleName `json:"role"`
 	IsBlocked bool            `json:"isBlocked"`
 }
+
+func (u *UserResponseDTO) FromUser(user *models.User) *UserResponseDTO {
+	u.Id = user.ID
+	u.Email = user.Email
+	u.Username = user.Username
+	u.Role = user.Role.Name
+	u.IsBlocked = user.IsBlocked
+	return u
+}
